0.7.0 TBD
* Support multiple configuration sections in config file (#25)
* Add FINAL_PREFIX environment variable support to ease packaging

0.6.6
* Fix wrong path in systemd service file (#54).
* Fix bad return value causing systemd problems (#53).
* Graceful exist on missing python-requests (#48).
Thanks to Teemo Ikonen

0.6.5
* Fix ip route parsing (#35)
* Fix python 3.9 syntax warnings (#38, #37)
* New plugin domains.google.com -- googledomains.py
* Error logging bugfixes (#4411454).
Thanks to aerusso, LoganK and Hroncok

0.6.4
* Fix address-options and service-options parsing regression (#24).
* Add new nsupdate(1) plugin (#29).
* Install systemd files in correct user locations (#22).
* Enhance ipv6 address parsing in address plugins (#28).
* Patch ddupdate.service script path on installation.
* Thanks to aerusso for nsupdate plugin, bugfixes and enhancements.

0.6.3
* Fix #21, broken ipv6 configuration file  parsing.
* Documentation bugfixes.

0.6.2
* New cloudflare plugin, thanks to Mika Mannermaa <mmannerm@gmail.com> 
* New  dy.fi, restricted ti what looks like finnish addresses.
  Thanks to Teemu Ikonen <tpikonen@gmail.com>
* Fix bug causing frequent updates due to cache misses (#19).
  Kudos: Teemu Ikonen
* Code and documentation cleanup.


0.6.1
* Fix crash when logging updates disabled by caching (#11).
* afraid.org: Use now available https url (#12).
* afraid.org: Support user-supplied addresses (#13).
* Misc cleanup.

0.6.0
* New setup by ddupdate-config based on a user service. Nothing installed
  as root, service runs as invoking user. Existing setups based on a
  separate user running service continues to work, but must be maintained
  manually.
* New service plugin dnspark.com
* New Hurricane Electric service plugin.
* New pkg-config build dependency.

9.5.3
* Remove the straight.plugins dependency.
* config: Fix bug creating new config files like ~/.config/dduodate.conf
* config: Add new address plugin option "Use address as of service".